Fix fixed footer overlapping maincontain area

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ li {
   align-items: center;
   flex-grow: 1;
   margin-top: 80px;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 figure {
